// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Extract receipt cloud function (offline) for "ec" receipts should successfully extract info from 'dresden-figaro-salon.txt' 1`] = `
Object {
  "result": Object {
    "data": Object {
      "amount": Object {
        "currency": "EUR",
        "value": 19.5,
      },
      "date": 2016-12-07T23:00:00.000Z,
      "header": Array [
        "FIGAR0 Dresden e G",
        "Salon Schweizer Strasse",
        "Schweizer Str, 2",
        "01169 Dresden",
      ],
      "paymentMethod": "DEBIT",
      "phone": "0351-47 11 295",
      "time": Object {
        "hour": 11,
        "minute": 56,
        "second": null,
      },
      "timestamp": 2016-12-08T10:56:00.000Z,
    },
    "state": "ready",
  },
}
`;

exports[`Extract receipt cloud function (offline) for "ec" receipts should successfully extract info from 'goe-cinemaxx.txt' 1`] = `
Object {
  "result": Object {
    "data": Object {
      "amount": Object {
        "currency": "EUR",
        "value": 11.1,
      },
      "date": 2018-05-22T22:00:00.000Z,
      "header": Array [
        "Cinemaxx Entertainment",
        "CxX Göttingen",
        "Bahnhofsallee 3",
        "37081 Göttingen",
      ],
      "paymentMethod": "DEBIT",
      "phone": null,
      "time": Object {
        "hour": 19,
        "minute": 47,
        "second": 44,
      },
      "timestamp": 2018-05-23T17:47:44.000Z,
    },
    "state": "ready",
  },
}
`;

exports[`Extract receipt cloud function (offline) for "ec" receipts should successfully extract info from 'hmue-Salon-haargenau.txt' 1`] = `
Object {
  "result": Object {
    "data": Object {
      "amount": Object {
        "currency": "EUR",
        "value": 15,
      },
      "date": 2019-04-12T22:00:00.000Z,
      "header": Array [
        "Salon haargenau",
        "Bahnhofstraße 1",
        "34346 Hann Münden",
      ],
      "paymentMethod": "DEBIT",
      "phone": "05541/6241",
      "time": Object {
        "hour": 13,
        "minute": 3,
        "second": null,
      },
      "timestamp": 2019-04-13T11:03:00.000Z,
    },
    "state": "ready",
  },
}
`;

exports[`Extract receipt cloud function (offline) for "ec" receipts should successfully extract info from 'hmue-Vockeroth.txt' 1`] = `
Object {
  "result": Object {
    "data": Object {
      "amount": Object {
        "currency": "EUR",
        "value": 117.95,
      },
      "date": 2019-04-12T22:00:00.000Z,
      "header": Array [
        "Bek leidungshaeuser",
        "Vockeroth GmbH",
        "Lange Str.73",
        "34346 Hann Muenden",
      ],
      "paymentMethod": "DEBIT",
      "phone": null,
      "time": Object {
        "hour": 14,
        "minute": 3,
        "second": null,
      },
      "timestamp": 2019-04-13T12:03:00.000Z,
    },
    "state": "ready",
  },
}
`;

exports[`Extract receipt cloud function (offline) for "ec" receipts should successfully extract info from 'hmue-cafe_Zimt_und_Zucker.txt' 1`] = `
Object {
  "result": Object {
    "data": Object {
      "amount": Object {
        "currency": "EUR",
        "value": 19.4,
      },
      "date": 2019-04-12T22:00:00.000Z,
      "header": Array [
        "Zimt & Zucker",
        "An der Werrabrücke",
        "Lange Str. 1",
        "34346 Hann o Münden",
        "Vielen Dank",
        "T(",
      ],
      "paymentMethod": "DEBIT",
      "phone": null,
      "time": Object {
        "hour": 15,
        "minute": 1,
        "second": 6,
      },
      "timestamp": 2019-04-13T13:01:06.000Z,
    },
    "state": "ready",
  },
}
`;

exports[`Extract receipt cloud function (offline) for "ec" receipts should successfully extract info from 'unknown-subway.txt' 1`] = `
Object {
  "result": Object {
    "data": Object {
      "amount": Object {
        "currency": "EUR",
        "value": 18.58,
      },
      "date": 2018-05-22T22:00:00.000Z,
      "header": Array [
        "K t",
        "Vielen Dank , dass Sie",
        "sich entschieden haben",
        "gesund & lecker zu essen",
        "Wir freuen uns auf Ihren",
        "nächsten Besuch!",
      ],
      "paymentMethod": "DEBIT",
      "phone": null,
      "time": Object {
        "hour": 18,
        "minute": 58,
        "second": 48,
      },
      "timestamp": 2018-05-23T16:58:48.000Z,
    },
    "state": "ready",
  },
}
`;

exports[`Extract receipt cloud function (offline) for "ec" receipts should successfully extract info from 'wf-barrique-bad-quality.txt' 1`] = `
Object {
  "result": Object {
    "data": Object {
      "amount": Object {
        "currency": "EUR",
        "value": 23.7,
      },
      "date": null,
      "header": Array [
        "Barrique",
        "38300 Woifenbuette l",
      ],
      "paymentMethod": "DEBIT",
      "phone": "05331/84942",
      "time": null,
    },
    "state": "partial",
  },
}
`;

exports[`Extract receipt cloud function (offline) for "ec" receipts should successfully extract info from 'wf-haargenau.txt' 1`] = `
Object {
  "result": Object {
    "data": Object {
      "amount": Object {
        "currency": "EUR",
        "value": 15,
      },
      "date": 2017-08-30T22:00:00.000Z,
      "header": Array [
        "Breslauer Str 2 d",
        "38302 Wofenbuettel",
      ],
      "paymentMethod": "DEBIT",
      "phone": "05331 33838",
      "time": null,
      "timestamp": 2017-08-30T22:00:00.000Z,
    },
    "state": "ready",
  },
}
`;

exports[`Extract receipt cloud function (offline) for "ec" receipts should successfully extract info from 'wob-sausalitos-2017.txt' 1`] = `
Object {
  "result": Object {
    "data": Object {
      "amount": Object {
        "currency": "EUR",
        "value": 28.8,
      },
      "date": 2017-08-27T22:00:00.000Z,
      "header": Array [
        "Sausalitos Holding GmbH",
        "Betrieb Wolfsburg",
        "Porschestr. 32",
        "38440 Wolfsburg",
      ],
      "paymentMethod": "CREDIT",
      "phone": null,
      "time": Object {
        "hour": 20,
        "minute": 33,
        "second": null,
      },
      "timestamp": 2017-08-28T18:33:00.000Z,
    },
    "state": "ready",
  },
}
`;

exports[`Extract receipt cloud function (offline) for "gas_station" receipts should successfully extract info from 'esso-rueden.txt' 1`] = `
Object {
  "result": Object {
    "data": Object {
      "amount": Object {
        "currency": "EUR",
        "value": 46.18,
      },
      "date": 2019-04-18T22:00:00.000Z,
      "header": Array [
        "Esso",
        "ESSO Station",
        "KMS Autohofbetriebsgesel lschafft",
        "Am Zainer Berg 2",
        "38723 Rhüden",
      ],
      "paymentMethod": "DKV_CARD",
      "phone": "05384/96660",
      "time": Object {
        "hour": 9,
        "minute": 14,
        "second": null,
      },
      "timestamp": 2019-04-19T07:14:00.000Z,
    },
    "state": "ready",
  },
}
`;

exports[`Extract receipt cloud function (offline) for "gas_station" receipts should successfully extract info from 'hem-cremlingen.txt' 1`] = `
Object {
  "result": Object {
    "data": Object {
      "amount": Object {
        "currency": "EUR",
        "value": 53.04,
      },
      "date": 2018-07-31T22:00:00.000Z,
      "header": Array [
        "HEM Tankstelle",
        "Ali Can Keceyapan",
        "Im Moorbusche 103",
        "38162 Cremlingen",
      ],
      "paymentMethod": "DKV_CARD",
      "phone": "05306 9309007",
      "time": Object {
        "hour": 6,
        "minute": 24,
        "second": 29,
      },
      "timestamp": 2018-08-01T04:24:29.000Z,
    },
    "state": "ready",
  },
}
`;

exports[`Extract receipt cloud function (offline) for "gas_station" receipts should successfully extract info from 'wob-sb_tankstelle.txt' 1`] = `
Object {
  "result": Object {
    "data": Object {
      "amount": Object {
        "currency": "EUR",
        "value": 69.41,
      },
      "date": 2019-04-29T22:00:00.000Z,
      "header": Array [
        "SB TANKSTELLE",
        "Sedat Kurtulus",
        "Breslauer Str. 45",
        "38440 Wolfsburg",
        "Tankstellen-Nr. 141170",
      ],
      "paymentMethod": "DKV_CARD",
      "phone": "05361 39000",
      "time": Object {
        "hour": 17,
        "minute": 37,
        "second": 8,
      },
      "timestamp": 2019-04-30T15:37:08.000Z,
    },
    "state": "ready",
  },
}
`;

exports[`Extract receipt cloud function (offline) for "normal" receipts should successfully extract info from 'bamberg-asian-shop.txt' 1`] = `
Object {
  "result": Object {
    "data": Object {
      "amount": Object {
        "currency": "EUR",
        "value": 1.5,
      },
      "date": 2019-01-17T23:00:00.000Z,
      "header": Array [
        "ASIAN SHOP",
        "Obere Konigstr.16",
        "96052 Bamberg",
      ],
      "paymentMethod": "CASH",
      "phone": "0951-18557292",
      "time": null,
      "timestamp": 2019-01-17T23:00:00.000Z,
    },
    "state": "ready",
  },
}
`;

exports[`Extract receipt cloud function (offline) for "normal" receipts should successfully extract info from 'bamberg-city-market.txt' 1`] = `
Object {
  "result": Object {
    "data": Object {
      "amount": Object {
        "currency": "EUR",
        "value": 4.91,
      },
      "date": 2018-11-05T23:00:00.000Z,
      "header": Array [
        "CITY-MARKT",
        "96047 BAMBERG LANGE STR, 12-14",
      ],
      "paymentMethod": "CASH",
      "phone": "0951/9230775",
      "time": Object {
        "hour": 16,
        "minute": 16,
        "second": null,
      },
      "timestamp": 2018-11-06T15:16:00.000Z,
    },
    "state": "ready",
  },
}
`;

exports[`Extract receipt cloud function (offline) for "normal" receipts should successfully extract info from 'bamberg-comixart.txt' 1`] = `
Object {
  "result": Object {
    "data": Object {
      "amount": Object {
        "currency": "EUR",
        "value": 2.99,
      },
      "date": 2019-04-26T22:00:00.000Z,
      "header": Array [
        "comixart",
        "Comicfachhandel",
        "96047 Bamberg",
        "Austraße 21",
      ],
      "paymentMethod": null,
      "phone": "0951/ 21655",
      "time": null,
      "timestamp": 2019-04-26T22:00:00.000Z,
    },
    "state": "ready",
  },
}
`;

exports[`Extract receipt cloud function (offline) for "normal" receipts should successfully extract info from 'bamberg-cunda.txt' 1`] = `
Object {
  "result": Object {
    "data": Object {
      "amount": Object {
        "currency": "EUR",
        "value": 12,
      },
      "date": 2019-01-30T23:00:00.000Z,
      "header": Array [
        "C&A D",
        "Bamberg",
        "Franz-Ludwig-Strasse 4",
      ],
      "paymentMethod": "DEBIT",
      "phone": null,
      "time": Object {
        "hour": 13,
        "minute": 54,
        "second": 53,
      },
      "timestamp": 2019-01-31T12:54:53.000Z,
    },
    "state": "ready",
  },
}
`;

exports[`Extract receipt cloud function (offline) for "normal" receipts should successfully extract info from 'bamberg-denns-biomarkt.txt' 1`] = `
Object {
  "result": Object {
    "data": Object {
      "amount": Object {
        "currency": "EUR",
        "value": 13.37,
      },
      "date": 2018-11-06T23:00:00.000Z,
      "header": Array [
        "denns",
        "denn's Biomarkt GmbH",
        "Obere Königstrasse 18-22",
        "96047 Bambers",
      ],
      "paymentMethod": "DEBIT",
      "phone": "0951 2080125",
      "time": Object {
        "hour": 16,
        "minute": 14,
        "second": 29,
      },
      "timestamp": 2018-11-07T15:14:29.000Z,
    },
    "state": "ready",
  },
}
`;

exports[`Extract receipt cloud function (offline) for "normal" receipts should successfully extract info from 'bamberg-dunkin-donuts.txt' 1`] = `
Object {
  "result": Object {
    "data": Object {
      "amount": Object {
        "currency": "EUR",
        "value": 3.6,
      },
      "date": 2019-04-26T22:00:00.000Z,
      "header": Array [
        "DFNBG Gastro GmbH & Co. KG",
        "Franz-Ludwig-Straße8",
        "96047 Bamberg",
      ],
      "paymentMethod": "CREDIT",
      "phone": "0951 30900892",
      "time": Object {
        "hour": 15,
        "minute": 26,
        "second": null,
      },
      "timestamp": 2019-04-27T13:26:00.000Z,
    },
    "state": "ready",
  },
}
`;

exports[`Extract receipt cloud function (offline) for "normal" receipts should successfully extract info from 'bamberg-karstadt.txt' 1`] = `
Object {
  "result": Object {
    "data": Object {
      "amount": Object {
        "currency": "EUR",
        "value": 16.99,
      },
      "date": 2019-02-07T23:00:00.000Z,
      "header": Array [
        "KARSTADT",
        "Karstadt Warenhaus GmbH",
        "Grüner Markt 23",
        "96047 Bambers",
      ],
      "paymentMethod": "DEBIT",
      "phone": null,
      "time": Object {
        "hour": 10,
        "minute": 59,
        "second": null,
      },
      "timestamp": 2019-02-08T09:59:00.000Z,
    },
    "state": "ready",
  },
}
`;

exports[`Extract receipt cloud function (offline) for "normal" receipts should successfully extract info from 'bamberg-mayerische.txt' 1`] = `
Object {
  "result": Object {
    "data": Object {
      "amount": Object {
        "currency": "EUR",
        "value": 11,
      },
      "date": 2019-04-01T22:00:00.000Z,
      "header": Array [
        "Mayersche Droste GmbH & Co. KG",
        "Königsallee 18",
        "40212 Düsseldorf",
      ],
      "paymentMethod": "DEBIT",
      "phone": "0211 542569-0",
      "time": Object {
        "hour": 12,
        "minute": 1,
        "second": null,
      },
      "timestamp": 2019-04-02T10:01:00.000Z,
    },
    "state": "ready",
  },
}
`;

exports[`Extract receipt cloud function (offline) for "normal" receipts should successfully extract info from 'bamberg-mueller.txt' 1`] = `
Object {
  "result": Object {
    "data": Object {
      "amount": Object {
        "currency": "EUR",
        "value": 4.82,
      },
      "date": 2019-04-23T22:00:00.000Z,
      "header": Array [
        "MMüller",
        "Maxiniliansplatz 14, 96047 Banberg",
      ],
      "paymentMethod": "CASH",
      "phone": "+49 951/5193936-0",
      "time": Object {
        "hour": 9,
        "minute": 32,
        "second": null,
      },
      "timestamp": 2019-04-24T07:32:00.000Z,
    },
    "state": "ready",
  },
}
`;

exports[`Extract receipt cloud function (offline) for "normal" receipts should successfully extract info from 'bamberg-osianderische-buchhandlung.txt' 1`] = `
Object {
  "result": Object {
    "data": Object {
      "amount": Object {
        "currency": "EUR",
        "value": 14.99,
      },
      "date": 2019-02-07T23:00:00.000Z,
      "header": Array [
        "os 1andersche Buchhandlung GmbH",
      ],
      "paymentMethod": "DEBIT",
      "phone": "+49 951 297925 0",
      "time": Object {
        "hour": 11,
        "minute": 8,
        "second": null,
      },
      "timestamp": 2019-02-08T10:08:00.000Z,
    },
    "state": "ready",
  },
}
`;

exports[`Extract receipt cloud function (offline) for "normal" receipts should successfully extract info from 'bamberg-rewe.txt' 1`] = `
Object {
  "result": Object {
    "data": Object {
      "amount": Object {
        "currency": "EUR",
        "value": 17.28,
      },
      "date": 2019-04-26T22:00:00.000Z,
      "header": Array [
        "REWE",
        "Lange Str. 25-27",
        "96047 Bamberg",
      ],
      "paymentMethod": "DEBIT",
      "phone": null,
      "time": Object {
        "hour": 15,
        "minute": 22,
        "second": 13,
      },
      "timestamp": 2019-04-27T13:22:13.000Z,
    },
    "state": "ready",
  },
}
`;

exports[`Extract receipt cloud function (offline) for "normal" receipts should successfully extract info from 'bamberg-stoffideen.txt' 1`] = `
Object {
  "result": Object {
    "data": Object {
      "amount": Object {
        "currency": "EUR",
        "value": 12.85,
      },
      "date": 2018-12-16T23:00:00.000Z,
      "header": Array [
        "STOFF",
        "Ihr Stoff- und Nähexpertegn",
        "Stoff-Ideen KMR GmbH",
        "Filiale Bamberg",
        "Fleischstraße 17",
        "96047 Bamberg",
      ],
      "paymentMethod": "DEBIT",
      "phone": "0951 50904990",
      "time": Object {
        "hour": 14,
        "minute": 14,
        "second": null,
      },
      "timestamp": 2018-12-17T13:14:00.000Z,
    },
    "state": "ready",
  },
}
`;

exports[`Extract receipt cloud function (offline) for "normal" receipts should successfully extract info from 'bamberg-tedi.txt' 1`] = `
Object {
  "result": Object {
    "data": Object {
      "amount": Object {
        "currency": "EUR",
        "value": 3.5,
      },
      "date": 2018-12-16T23:00:00.000Z,
      "header": Array [
        "TEDI GmbH & Co. KG",
        "96047 Bamberg",
        "Fleischstrale 11-13",
        "Fil lale 5178",
        "Kasio 1",
      ],
      "paymentMethod": "CASH",
      "phone": null,
      "time": Object {
        "hour": 14,
        "minute": 30,
        "second": null,
      },
      "timestamp": 2018-12-17T13:30:00.000Z,
    },
    "state": "ready",
  },
}
`;

exports[`Extract receipt cloud function (offline) for "normal" receipts should successfully extract info from 'bamberg-wollstudio.txt' 1`] = `
Object {
  "result": Object {
    "data": Object {
      "amount": Object {
        "currency": "EUR",
        "value": 10.15,
      },
      "date": 2018-11-26T23:00:00.000Z,
      "header": Array [
        "ww",
        "WOLLSTUDI0",
        "FRIEDERIKE PFUND",
        "PROMENADE 18 96047 BAMBER",
        "粖 IELEHN:",
      ],
      "paymentMethod": "CASH",
      "phone": "0951-202173",
      "time": null,
      "timestamp": 2018-11-26T23:00:00.000Z,
    },
    "state": "ready",
  },
}
`;

exports[`Extract receipt cloud function (offline) for "normal" receipts should successfully extract info from 'bamberg-wong-asia-markt.txt' 1`] = `
Object {
  "result": Object {
    "data": Object {
      "amount": Object {
        "currency": "EUR",
        "value": 3.89,
      },
      "date": 2013-01-17T23:00:00.000Z,
      "header": Array [
        "WONG S ASIA MARKT",
        "Luitpoldstr.43",
        "96052 Baiberg",
      ],
      "paymentMethod": "CASH",
      "phone": "0951-9179681",
      "time": Object {
        "hour": 11,
        "minute": 55,
        "second": null,
      },
      "timestamp": 2013-01-18T10:55:00.000Z,
    },
    "state": "ready",
  },
}
`;

exports[`Extract receipt cloud function (offline) for "normal" receipts should successfully extract info from 'bamberg-zeis-restaurant.txt' 1`] = `
Object {
  "result": Object {
    "data": Object {
      "amount": Object {
        "currency": "EUR",
        "value": 38.9,
      },
      "date": 2019-04-25T22:00:00.000Z,
      "header": Array [
        "testa",
        "tontat",
        "Hager u, Etterer GbR",
        "Cafe Restaurant Zeis",
        "Obstmarkt 3-96047 Bamberg",
      ],
      "paymentMethod": null,
      "phone": "0951 2082466",
      "time": Object {
        "hour": 20,
        "minute": 54,
        "second": null,
      },
      "timestamp": 2019-04-26T18:54:00.000Z,
    },
    "state": "ready",
  },
}
`;

exports[`Extract receipt cloud function (offline) for "normal" receipts should successfully extract info from 'bielefeld-rancho-steakhouse.txt' 1`] = `
Object {
  "result": Object {
    "data": Object {
      "amount": Object {
        "currency": "EUR",
        "value": 61.9,
      },
      "date": 2019-02-24T23:00:00.000Z,
      "header": Array [
        "RANCHO",
        "STEAKHOUSE",
        "Niederwalle 37",
        "33602 Bielefed",
      ],
      "paymentMethod": null,
      "phone": "0521-96 79 79 79",
      "time": Object {
        "hour": 20,
        "minute": 1,
        "second": null,
      },
      "timestamp": 2019-02-25T19:01:00.000Z,
    },
    "state": "ready",
  },
}
`;

exports[`Extract receipt cloud function (offline) for "normal" receipts should successfully extract info from 'bs-elbenwald.txt' 1`] = `
Object {
  "result": Object {
    "data": Object {
      "amount": Object {
        "currency": "EUR",
        "value": 10,
      },
      "date": 2018-12-19T23:00:00.000Z,
      "header": Array [
        "ELBENWALD",
        "FANTASTISCH EINKAUFEN",
        "Elbenwald Store Braunschweig",
        "Schloss Arkaden",
        "Platz am Ritterbrunnen",
        "38100 Braunschweig",
        "www.elbenwald.de",
      ],
      "paymentMethod": "DEBIT",
      "phone": "0531 21965536",
      "time": Object {
        "hour": 15,
        "minute": 58,
        "second": 12,
      },
      "timestamp": 2018-12-20T14:58:12.000Z,
    },
    "state": "ready",
  },
}
`;

exports[`Extract receipt cloud function (offline) for "normal" receipts should successfully extract info from 'bs-ikea.txt' 1`] = `
Object {
  "result": Object {
    "data": Object {
      "amount": Object {
        "currency": "EUR",
        "value": 13.38,
      },
      "date": 2019-01-04T23:00:00.000Z,
      "header": Array [
        "KEA",
        "IKEA Deutschland GmbH & Co.KG",
        "Hansestrasse 27, 38112 Braunschweig",
      ],
      "paymentMethod": "CREDIT",
      "phone": "06192 /93 999 99",
      "time": Object {
        "hour": 10,
        "minute": 14,
        "second": null,
      },
      "timestamp": 2019-01-05T09:14:00.000Z,
    },
    "state": "ready",
  },
}
`;

exports[`Extract receipt cloud function (offline) for "normal" receipts should successfully extract info from 'bs-oil_and_vinegar.txt' 1`] = `
Object {
  "result": Object {
    "data": Object {
      "amount": Object {
        "currency": "EUR",
        "value": 15.95,
      },
      "date": 2018-12-19T23:00:00.000Z,
      "header": Array [
        "IL",
        "INEGAR",
        "0il & Vinegar Brau schweig",
        "Platz am Ritterbrunnen 1",
        "38100 Braunschweig",
      ],
      "paymentMethod": "CASH",
      "phone": "+49 (0)531 26152500",
      "time": Object {
        "hour": 16,
        "minute": 37,
        "second": null,
      },
      "timestamp": 2018-12-20T15:37:00.000Z,
    },
    "state": "ready",
  },
}
`;

exports[`Extract receipt cloud function (offline) for "normal" receipts should successfully extract info from 'bs-penny.txt' 1`] = `
Object {
  "result": Object {
    "data": Object {
      "amount": Object {
        "currency": "EUR",
        "value": 7.53,
      },
      "date": 2018-08-10T22:00:00.000Z,
      "header": Array [
        "PENN Y MAR KT GmbH",
        "Goslarsche Str. 21A",
        "38118 Braunschweig",
      ],
      "paymentMethod": "CREDIT",
      "phone": null,
      "time": Object {
        "hour": 12,
        "minute": 13,
        "second": 48,
      },
      "timestamp": 2018-08-11T10:13:48.000Z,
    },
    "state": "ready",
  },
}
`;

exports[`Extract receipt cloud function (offline) for "normal" receipts should successfully extract info from 'bs-rewe-goslarsche.txt' 1`] = `
Object {
  "result": Object {
    "data": Object {
      "amount": Object {
        "currency": "EUR",
        "value": 52.52,
      },
      "date": 2018-08-02T22:00:00.000Z,
      "header": Array [
        "REWE",
        "Goslarsche Str. 61",
        "38118 Braunschweig",
      ],
      "paymentMethod": "CREDIT",
      "phone": "0531/55472",
      "time": Object {
        "hour": 19,
        "minute": 43,
        "second": 4,
      },
      "timestamp": 2018-08-03T17:43:04.000Z,
    },
    "state": "ready",
  },
}
`;

exports[`Extract receipt cloud function (offline) for "normal" receipts should successfully extract info from 'bs-rewe-schloss.txt' 1`] = `
Object {
  "result": Object {
    "data": Object {
      "amount": Object {
        "currency": "EUR",
        "value": 22.51,
      },
      "date": 2018-12-07T23:00:00.000Z,
      "header": Array [
        "REWE",
        "Schlossarkaden",
        "38100 Braunschweig",
      ],
      "paymentMethod": "CREDIT",
      "phone": null,
      "time": Object {
        "hour": 15,
        "minute": 59,
        "second": 22,
      },
      "timestamp": 2018-12-08T14:59:22.000Z,
    },
    "state": "ready",
  },
}
`;

exports[`Extract receipt cloud function (offline) for "normal" receipts should successfully extract info from 'bs-saturn.txt' 1`] = `
Object {
  "result": Object {
    "data": Object {
      "amount": Object {
        "currency": "EUR",
        "value": 74.93,
      },
      "date": 2018-12-19T23:00:00.000Z,
      "header": Array [
        "SATURN BRAUNSCHWETG",
        "Schlossarkaden",
        "Platz am Ritterbrunnen 1",
      ],
      "paymentMethod": "CREDIT",
      "phone": "0531-12949-0",
      "time": Object {
        "hour": 16,
        "minute": 31,
        "second": 6,
      },
      "timestamp": 2018-12-20T15:31:06.000Z,
    },
    "state": "ready",
  },
}
`;

exports[`Extract receipt cloud function (offline) for "normal" receipts should successfully extract info from 'bs-tee-gschwendner.txt' 1`] = `
Object {
  "result": Object {
    "data": Object {
      "amount": Object {
        "currency": "EUR",
        "value": 23.6,
      },
      "date": 2018-12-19T23:00:00.000Z,
      "header": Array [
        "Gschwendner",
        "Schloss Arkaden",
      ],
      "paymentMethod": "DEBIT",
      "phone": "0531/6183036",
      "time": Object {
        "hour": 16,
        "minute": 44,
        "second": 14,
      },
      "timestamp": 2018-12-20T15:44:14.000Z,
    },
    "state": "ready",
  },
}
`;

exports[`Extract receipt cloud function (offline) for "normal" receipts should successfully extract info from 'bs-tommy-hilfiger.txt' 1`] = `
Object {
  "result": Object {
    "data": Object {
      "amount": Object {
        "currency": "EUR",
        "value": 219.8,
      },
      "date": 2018-12-07T23:00:00.000Z,
      "header": Array [
        "TOMMY E HILFIGER",
        "TJ BRAUNSCHWEIG",
        "Platz am Ritterbrunnen 1",
        "38100 Braunschweig",
      ],
      "paymentMethod": "CREDIT",
      "phone": "+49 (0) 531 618 3341",
      "time": Object {
        "hour": 15,
        "minute": 39,
        "second": 22,
      },
      "timestamp": 2018-12-08T14:39:22.000Z,
    },
    "state": "ready",
  },
}
`;

exports[`Extract receipt cloud function (offline) for "normal" receipts should successfully extract info from 'dresden-butlers.txt' 1`] = `
Object {
  "result": Object {
    "data": Object {
      "amount": Object {
        "currency": "EUR",
        "value": 7.99,
      },
      "date": 2016-12-08T23:00:00.000Z,
      "header": Array [
        "BUTILERS Dresden 1",
        "Altmarkt-Galerie",
        "Webergasse 1",
        "01067 Dresden",
      ],
      "paymentMethod": "DEBIT",
      "phone": "+49 351 49768812",
      "time": Object {
        "hour": 13,
        "minute": 9,
        "second": null,
      },
      "timestamp": 2016-12-09T12:09:00.000Z,
    },
    "state": "ready",
  },
}
`;

exports[`Extract receipt cloud function (offline) for "normal" receipts should successfully extract info from 'hannover-akia-handyshop.txt' 1`] = `
Object {
  "result": Object {
    "data": Object {
      "amount": Object {
        "currency": "EUR",
        "value": 17.99,
      },
      "date": 2017-08-31T22:00:00.000Z,
      "header": Array [
        "AKIA HANDYSHOP",
        "Hannover HBF",
        "Ernst-August-Platz",
        "Im Hauptbahnhof( Osthalle)",
        "30159 Hannover",
      ],
      "paymentMethod": "DEBIT",
      "phone": "0511/23523333",
      "time": Object {
        "hour": 15,
        "minute": 23,
        "second": null,
      },
      "timestamp": 2017-09-01T13:23:00.000Z,
    },
    "state": "ready",
  },
}
`;

exports[`Extract receipt cloud function (offline) for "normal" receipts should successfully extract info from 'leipzip-messebuchhandlung.txt' 1`] = `
Object {
  "result": Object {
    "data": Object {
      "amount": Object {
        "currency": "EUR",
        "value": 12.99,
      },
      "date": 2019-03-22T23:00:00.000Z,
      "header": Array [
        "Messebuchhandlung",
        "powered by Haufe",
        "Lieferdatum = Rechnungsdatum",
      ],
      "paymentMethod": null,
      "phone": "+49 341 9954 250",
      "time": Object {
        "hour": 16,
        "minute": 20,
        "second": 46,
      },
      "timestamp": 2019-03-23T15:20:46.000Z,
    },
    "state": "ready",
  },
}
`;

exports[`Extract receipt cloud function (offline) for "normal" receipts should successfully extract info from 'wf-apotheke.txt' 1`] = `
Object {
  "result": Object {
    "data": Object {
      "amount": Object {
        "currency": "EUR",
        "value": 27.87,
      },
      "date": 2017-09-26T22:00:00.000Z,
      "header": Array [
        "Akazien-Apotheke oHG",
        "Uta und Thomas Eckert",
        "Danziger Str. 14",
        "38302 Wolfenbūttel",
      ],
      "paymentMethod": "DEBIT",
      "phone": "05331/72817",
      "time": Object {
        "hour": 17,
        "minute": 16,
        "second": null,
      },
      "timestamp": 2017-09-27T15:16:00.000Z,
    },
    "state": "ready",
  },
}
`;

exports[`Extract receipt cloud function (offline) for "normal" receipts should successfully extract info from 'wf-buecher-behr.txt' 1`] = `
Object {
  "result": Object {
    "data": Object {
      "amount": Object {
        "currency": "EUR",
        "value": 10.49,
      },
      "date": 2018-08-27T22:00:00.000Z,
      "header": Array [
        "Bücher Behr",
        "Die Buchhandiung am Kornmark:",
        "Die Buchhandlung am Kor nmarkt",
        "Kornmarkt 4-5",
        "38300 Wolfenhüttel",
      ],
      "paymentMethod": "DEBIT",
      "phone": "05331-98890",
      "time": null,
      "timestamp": 2018-08-27T22:00:00.000Z,
    },
    "state": "ready",
  },
}
`;

exports[`Extract receipt cloud function (offline) for "normal" receipts should successfully extract info from 'wf-edeka.txt' 1`] = `
Object {
  "result": Object {
    "data": Object {
      "amount": Object {
        "currency": "EUR",
        "value": 44.13,
      },
      "date": 2018-05-25T22:00:00.000Z,
      "header": Array [
        "cente",
        "E CENTER Denis Brueggendick",
        "Schweigerstr.5",
        "38302 Wolfenbüttel",
      ],
      "paymentMethod": "DEBIT",
      "phone": "05331/90570",
      "time": Object {
        "hour": 12,
        "minute": 5,
        "second": 16,
      },
      "timestamp": 2018-05-26T10:05:16.000Z,
    },
    "state": "ready",
  },
}
`;

exports[`Extract receipt cloud function (offline) for "normal" receipts should successfully extract info from 'wf-fleischerei-hass.txt' 1`] = `
Object {
  "result": Object {
    "data": Object {
      "amount": Object {
        "currency": "EUR",
        "value": 7.6,
      },
      "date": 2017-09-22T22:00:00.000Z,
      "header": Array [
        "Fieischerei & Partyservice",
        "Peter Haß",
        "Der Anger 1",
        "38302 Wolfenbüttel",
      ],
      "paymentMethod": "CASH",
      "phone": "05331 - 71845",
      "time": null,
      "timestamp": 2017-09-22T22:00:00.000Z,
    },
    "state": "ready",
  },
}
`;

exports[`Extract receipt cloud function (offline) for "normal" receipts should successfully extract info from 'wf-fleischerei-heine.txt' 1`] = `
Object {
  "result": Object {
    "data": Object {
      "amount": Object {
        "currency": "EUR",
        "value": 8.97,
      },
      "date": 2017-09-27T22:00:00.000Z,
      "header": Array [
        "Fleischerei Frank Heine",
        "Kornmarkt 15",
        "38300 Wolfenbüttel",
      ],
      "paymentMethod": null,
      "phone": "05331/2818",
      "time": Object {
        "hour": 15,
        "minute": 46,
        "second": null,
      },
      "timestamp": 2017-09-28T13:46:00.000Z,
    },
    "state": "ready",
  },
}
`;

exports[`Extract receipt cloud function (offline) for "normal" receipts should successfully extract info from 'wf-nanu-nana.txt' 1`] = `
Object {
  "result": Object {
    "data": Object {
      "amount": Object {
        "currency": "EUR",
        "value": 4.45,
      },
      "date": 2018-08-27T22:00:00.000Z,
      "header": Array [
        "suchenstobern finden",
        "NANU NANA",
        "Lange Herzogstr, 57",
        "38300 Wolfenbütte",
      ],
      "paymentMethod": "CASH",
      "phone": "05331-8560085",
      "time": Object {
        "hour": 18,
        "minute": 3,
        "second": 25,
      },
      "timestamp": 2018-08-28T16:03:25.000Z,
    },
    "state": "ready",
  },
}
`;

exports[`Extract receipt cloud function (offline) for "normal" receipts should successfully extract info from 'wob-edeka.txt' 1`] = `
Object {
  "result": Object {
    "data": Object {
      "amount": Object {
        "currency": "EUR",
        "value": 8.32,
      },
      "date": 2019-02-21T23:00:00.000Z,
      "header": Array [
        "EDEKA",
        "Wir Lebensmittel",
        "Edeka Fi1. 2129",
        "Grauhorststr. 1",
        "38440 Wolfsburg OT Hageberg",
        "MILKANA KRAEUTER",
        "MOEVENP. PUDDING",
        "OETK.CREME FRAICHE",
      ],
      "paymentMethod": "CREDIT",
      "phone": null,
      "time": Object {
        "hour": 16,
        "minute": 58,
        "second": 57,
      },
      "timestamp": 2019-02-22T15:58:57.000Z,
    },
    "state": "ready",
  },
}
`;

exports[`Extract receipt cloud function (offline) for "normal" receipts should successfully extract info from 'wob-media_markt.txt' 1`] = `
Object {
  "result": Object {
    "data": Object {
      "amount": Object {
        "currency": "EUR",
        "value": 34.9,
      },
      "date": 2019-03-15T23:00:00.000Z,
      "header": Array [
        "MedlaMarkt",
        "MEDIA MARKT WOLFSBURG",
        "TV-HIFI ELEKTRO Gmbh",
        "Wolfsburg-Brandgehaege 3",
      ],
      "paymentMethod": "CREDIT",
      "phone": "05308-701",
      "time": Object {
        "hour": 17,
        "minute": 18,
        "second": 38,
      },
      "timestamp": 2019-03-16T16:18:38.000Z,
    },
    "state": "ready",
  },
}
`;

exports[`Extract receipt cloud function (offline) for "normal" receipts should successfully extract info from 'wob-real.txt' 1`] = `
Object {
  "result": Object {
    "data": Object {
      "amount": Object {
        "currency": "EUR",
        "value": 83.89,
      },
      "date": 2019-03-29T23:00:00.000Z,
      "header": Array [
        "real Wolfsburg",
        "Brandgehaege 9",
        "38444",
        "Wolfsburs",
      ],
      "paymentMethod": "DEBIT",
      "phone": null,
      "time": Object {
        "hour": 19,
        "minute": 10,
        "second": 28,
      },
      "timestamp": 2019-03-30T18:10:28.000Z,
    },
    "state": "ready",
  },
}
`;

exports[`Extract receipt cloud function (offline) for "normal" receipts should successfully extract info from 'wob-smileys.txt' 1`] = `
Object {
  "result": Object {
    "data": Object {
      "amount": Object {
        "currency": "EUR",
        "value": 12.85,
      },
      "date": 2019-03-13T23:00:00.000Z,
      "header": Array [
        "Smiley's Pizza Profis, Inh.: M. Voigt",
        "Kantallee 1a, 38440 Wolfsburg",
        "St.Nr. 19/145/10973",
      ],
      "paymentMethod": "DEBIT",
      "phone": "05361 272 666",
      "time": Object {
        "hour": 18,
        "minute": 27,
        "second": null,
      },
      "timestamp": 2019-03-14T17:27:00.000Z,
    },
    "state": "ready",
  },
}
`;
